--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jszip": "^3.4.0",
     "bpmn-js": "^18.9.1",
     "bpmn-js-properties-panel": "^5.45.0",
     "camunda-bpmn-moddle": "^7.0.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
